cfn/cfn.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Template for VPC with NAT instance",
    "Mappings": {
        "AMI": {
            "AmazonLinux": {
                "201403": "ami-29dc9228"
            },
            "NAT": {
                "201303": "ami-5f840e5e",
                "201309": "ami-cd43d9cc"
            }
        },
        "Common": {
            "KeyPair": {
                "Ec2KeyName": "default-key"
            },
            "Role": {
                "Ec2Role": "ec2-user"
            }
        }
    },
    "Parameters": {
        "InstanceType": {
            "Type": "String",
            "Default": "t2.small",
            "AllowedValues": [
                "t2.small",
                "m3.large"
            ],
            "Description": "Instance type for EC2 Instance"
        },
        "Env": {
            "Type": "String",
            "AllowedValues": [
                "blue",
                "green"
            ],
            "Description": "Environment for deployment(Blue/Green)"
        }
    },
    "Resources": {
        "Vpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "vpc"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "Igw": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "igw"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "AttachIgw": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "InternetGatewayId": {
                    "Ref": "Igw"
                }
            }
        },
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": "ap-northeast-1a",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-subnet"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "CidrBlock": "10.0.2.0/24",
                "AvailabilityZone": "ap-northeast-1a",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "private-subnet"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "public-route-table"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "private-route-table"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "Igw"
                }
            },
            "DependsOn": "AttachIgw"
        },
        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId": {
                    "Ref": "Bastion"
                }
            },
            "DependsOn": "Bastion"
        },
        "PublicRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "PrivateRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PrivateSubnet"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }
        },
        "Internal": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "GroupDescription": "Allow all communications in VPC",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "0",
                        "ToPort": "65535",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "0",
                        "ToPort": "65535",
                        "CidrIp": "10.0.0.0/16"
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": "-1",
                        "ToPort": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "internal"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "CmMainte": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "Vpc"
                },
                "GroupDescription": "Allow ssh from Classmethod",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "111.222.333.444/32"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "cm-mainte"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "Bastion": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": "t1.micro",
                "KeyName": {
                    "Fn::FindInMap": [
                        "Common",
                        "KeyPair",
                        "Ec2KeyName"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicSubnet"
                },
                "ImageId": {
                    "Fn::FindInMap": [
                        "AMI",
                        "NAT",
                        "201309"
                    ]
                },
                "IamInstanceProfile": {
                    "Fn::FindInMap": [
                        "Common",
                        "Role",
                        "Ec2Role"
                    ]
                },
                "SourceDestCheck": false,
                "SecurityGroupIds": [
                    {
                        "Ref": "Internal"
                    },
                    {
                        "Ref": "CmMainte"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "bastion"
                    },
                    {
                        "Key": "Application",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#! /bin/bash -v\\n",
                                "yum update -y\\n"
                            ]
                        ]
                    }
                }
            }
        },
        "BastionEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "InstanceId": {
                    "Ref": "Bastion"
                }
            }
        },
        "WebServerWaitHandle": {
            "Type": "AWS::CloudFormation::WaitConditionHandle"
        },
        "BatchServerWaitHandle": {
            "Type": "AWS::CloudFormation::WaitConditionHandle"
        },
        "WebServerWaitCondition": {
            "Type": "AWS::CloudFormation::WaitCondition",
            "Properties": {
                "Handle": {
                    "Ref": "WebServerWaitHandle"
                },
                "Timeout": "1000"
            },
            "DependsOn": [
                "Bastion"
            ]
        },
        "BatchServerWaitCondition": {
            "Type": "AWS::CloudFormation::WaitCondition",
            "Properties": {
                "Handle": {
                    "Ref": "BatchServerWaitHandle"
                },
                "Timeout": "900"
            }
        }
    },
    "Outputs": {
        "WebServerIpAddress": {
            "Value": {
                "Ref": "BastionEIP"
            },
            "Description": "IP Address of Web Server"
        },
        "WebServerAvailabilityZone": {
            "Value": {
                "Fn::GetAtt": [
                    "Bastion",
                    "AvailabilityZone"
                ]
            },
            "Description": "Availability Zone of Web Server"
        }
    }
}
